--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "services:stop": "docker compose -f infra/compose.yaml stop",
     "services:down": "docker compose -f infra/compose.yaml down",
     "migration:create": "node-pg-migrate --migrations-dir infra/migrations create",
-    "migration:up": "dotenv -e .env.development -- node-pg-migrate -m infra/migrations up",
-    "migration:down": "dotenv -e .env.development -- node-pg-migrate -m infra/migrations down"
+    "migration:up": "node-pg-migrate -m infra/migrations --envPath .env.development up",
+    "migration:down": "node-pg-migrate -m infra/migrations --envPath .env.development down"
   },
   "author": "",
   "license": "ISC",
@@ -21,8 +21,5 @@
     "pg": "^8.11.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
-  },
-  "devDependencies": {
-    "dotenv-cli": "^10.0.0"
   }
 }
