--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "services:up": "docker compose -f infra/compose.yaml up -d",
     "services:stop": "docker compose -f infra/compose.yaml stop",
     "services:down": "docker compose -f infra/compose.yaml down",
-    "migration:create": "node-pg-migrate --migrations-dir infra/migrations create",
+    "migration:create": "node-pg-migrate -m infra/migrations create",
     "migration:up": "node-pg-migrate -m infra/migrations --envPath .env.development up",
-    "migration:down": "node-pg-migrate -m infra/migrations --envPath .env.development down"
+    "migration:down": "node-pg-migrate -m infra/migrations --envPath .env.development down",
+    "test": "jest --runInBand",
+    "test:watch": "jest --watchAll --runInBand"
   },
   "author": "",
   "license": "ISC",
@@ -21,5 +23,8 @@
     "pg": "^8.11.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "jest": "^29.6.2"
   }
 }
