--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "dotenv-expand": "^12.0.3",
     "jest": "^29.6.2",
     "prettier": "^3.6.2"
   }
