--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "description": "E-commerce para Compra e Venda de Jogos Físicos Usados",
   "main": "index.js",
   "scripts": {
-    "dev": "npm run services:up && npm run wait-for-database && npm run migration:up next dev",
+    "dev": "npm run services:up && npm run wait-for-database && npm run migration:up && next dev",
     "services:up": "docker compose -f infra/compose.yaml up -d",
     "services:stop": "docker compose -f infra/compose.yaml stop",
     "services:down": "docker compose -f infra/compose.yaml down",
     "migration:create": "node-pg-migrate -m infra/migrations create",
     "migration:up": "node-pg-migrate -m infra/migrations --envPath .env.development up",
     "migration:down": "node-pg-migrate -m infra/migrations --envPath .env.development down",
-    "test": "jest --runInBand",
+    "test": "npm run services:up && concurrently -n next,jest --hide next -k -s command-jest \"next dev\" \"jest --runInBand --verbose\"",
     "test:watch": "jest --watchAll --runInBand",
     "lint:check": "prettier --check .",
     "lint:fix": "prettier --write .",
@@ -29,6 +29,7 @@
     "swr": "2.2.5"
   },
   "devDependencies": {
+    "concurrently": "^8.2.2",
     "dotenv-expand": "^12.0.3",
     "jest": "^29.6.2",
     "prettier": "^3.6.2"
