--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "license": "ISC",
   "dependencies": {
     "async-retry": "^1.3.3",
-    "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.2",
     "dotenv": "^16.4.4",
     "next": "^13.1.6",
     "next-connect": "^1.0.0",
