--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "async-retry": "^1.3.3",
     "bcryptjs": "^3.0.2",
+    "cookie": "1.0.2",
     "dotenv": "^16.4.4",
     "next": "^13.1.6",
     "next-connect": "^1.0.0",
@@ -29,12 +30,14 @@
     "pg": "^8.11.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "swr": "2.2.5"
+    "swr": "2.2.5",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "concurrently": "^8.2.2",
     "dotenv-expand": "^12.0.3",
     "jest": "^29.6.2",
-    "prettier": "^3.6.2"
+    "prettier": "^3.6.2",
+    "set-cookie-parser": "2.7.1"
   }
 }
