--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "pg": "^8.11.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
     "swr": "2.2.5"
   },
   "devDependencies": {
