--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "pg": "^8.11.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
     "swr": "2.2.5",
     "uuid": "^11.1.0"
   },
