--- a/package.json
+++ b/package.json
@@ -25,16 +25,17 @@
     "dotenv": "^16.4.4",
     "next": "^13.1.6",
     "next-connect": "^1.0.0",
-    "node-pg-migrate": "^6.2.2",
     "pg": "^8.11.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
     "swr": "2.2.5"
   },
   "devDependencies": {
     "concurrently": "^8.2.2",
     "dotenv-expand": "^12.0.3",
     "jest": "^29.6.2",
+    "node-pg-migrate": "^8.0.3",
     "prettier": "^3.6.2"
   }
 }
