--- a/.env.development
+++ b/.env.development
@@ -11,3 +11,12 @@ EMAIL_SMTP_USER=
 EMAIL_SMTP_PASSWORD=
 EMAIL_HTPP_HOST=localhost
 EMAIL_HTTP_PORT=1080
+
+
+NEXT_PUBLIC_FIREBASE_KEY=SUA_KEY
+NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=SEU_AUTH_DOMAIN
+NEXT_PUBLIC_FIREBASE_PROJECT_ID=SEU_PROJECT_ID
+NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=SEU_STORAGE_BUCKET
+NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=SEU_MESSAGING_SENDER_ID
+NEXT_PUBLIC_FIREBASE_APP_ID=SEU_APP_ID
+NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID=SEU_MEASUREMENT_ID
