--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bcryptjs": "^3.0.2",
     "cookie": "1.0.2",
     "dotenv": "^16.4.4",
+    "firebase": "12.4.0",
     "next": "^13.1.6",
     "next-connect": "^1.0.0",
     "node-pg-migrate": "^6.2.2",
