--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
+    "resend": "^6.2.2",
     "swr": "2.2.5",
     "uuid": "^11.1.0"
   },
