--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^7.1.0",
+    "@fortawesome/free-regular-svg-icons": "^7.1.0",
+    "@fortawesome/free-solid-svg-icons": "^7.1.0",
+    "@fortawesome/react-fontawesome": "^3.1.0",
     "async-retry": "^1.3.3",
     "bcryptjs": "^3.0.2",
     "cookie": "1.0.2",
